<resources>
    <string name="app_name">GFXStudio</string>
    <string name="Login">Log In</string>
    <string name="SignUp">Sign Up</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="name_sign">Name</string>
    <string name="email_sign">Email</string>
    <string name="mobile_no_sign">Mobile No.</string>
    <string name="password_sign">Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_user">Already User?</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="switchFor">Yes</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="Description">TextView</string>
    <string name="todo">TODO</string>
</resources>
